# modules/apps/commerce/headless/headless-commerce/headless-commerce-delivery-order-impl/rest-openapi.yaml
@@ -810,6 +810,11 @@ paths:
                   schema:
                       type: string
                 - in: query
+                  name: filter
+                  required: false
+                  schema:
+                      type: string
+                - in: query
                   name: page
                   required: false
                   schema:
@@ -819,6 +824,16 @@ paths:
                   required: false
                   schema:
                       type: integer
+                - in: query
+                  name: search
+                  required: false
+                  schema:
+                      type: string
+                - in: query
+                  name: sort
+                  required: false
+                  schema:
+                      type: string
             responses:
                 200:
                     content:
@@ -973,6 +988,11 @@ paths:
                       type: integer
                   style: simple
                 - in: query
+                  name: filter
+                  required: false
+                  schema:
+                      type: string
+                - in: query
                   name: page
                   required: false
                   schema:
@@ -982,6 +1002,16 @@ paths:
                   required: false
                   schema:
                       type: integer
+                - in: query
+                  name: search
+                  required: false
+                  schema:
+                      type: string
+                - in: query
+                  name: sort
+                  required: false
+                  schema:
+                      type: string
             responses:
                 200:
                     content:
